--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-  <title>Online Bookstore</title>
-  <link rel="stylesheet" th:href="@{/css/styles.css}">
+  <title>Le's Online Book Store</title>
+  <link rel="stylesheet" th:href="@{/css/styles1.css}"> <!-- Header styles -->
+  <link rel="stylesheet" th:href="@{/css/styles0.css}"> <!-- Page-specific styles -->
 </head>
 <body>
+<!-- Include Header -->
 <th:block th:insert="fragments/header.html"></th:block>
 
-<h1>Welcome to the Online Bookstore</h1>
-<p>Browse our collection and add books to your cart!</p>
+<div class="container">
+  <h1 class="welcome-title">Welcome to Le's Online Book Store!</h1>
 
-<a href="/books" class="btn">Start Shopping</a>
+  <!-- Home Page Image -->
+  <div class="home-image">
+    <img src="https://static01.nyt.com/images/2017/05/11/t-magazine/bookstore-slide-2MCD/bookstore-slide-2MCD-superJumbo.jpg" alt="Bookstore" class="responsive-img">
+  </div>
+</div>
 
-<th:block th:insert="fragments/footer.html"></th:block>
+<!-- Footer -->
+<footer>
+  <p><em><strong>Sheridan College</strong></em> ❤️ &nbsp; Copyright © Le Nguyen</p>
+  <p><small>ID: 484385423</small></p>
+</footer>
 </body>
 </html>
 
