--- a/src/main/resources/templates/available_books.html
+++ b/src/main/resources/templates/available_books.html
@@ -47,8 +47,8 @@
 
   <!-- Footer -->
   <footer>
-    <p><em><strong>Sheridan College</strong></em> ❤️ &nbsp; Copyright © Le Nguyen</p>
-    <p><small>ID: 484385423</small></p>
+    <p><em><strong>Bruno Barros</strong></em> </p>
+    <p><small>ID: 991758456</small></p>
   </footer>
 </div>
 </body>
