--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
   <title>Check Out Page</title>
-  <link rel="stylesheet" th:href="@{/css/styles1.css}"> <!-- Header styles -->
-  <link rel="stylesheet" th:href="@{/css/styles4.css}"> <!-- Page-specific styles -->
+  <link rel="stylesheet" th:href="@{/css/styles1.css}">
+  <link rel="stylesheet" th:href="@{/css/styles4.css}">
 </head>
 <body>
 <!-- Include Header -->
@@ -12,7 +12,7 @@
 <div class="container">
   <h2 class="page-title">Check out page!</h2>
 
-  <!-- Checkout Table -->
+  <!-- Shopping Cart Table -->
   <table class="checkout-table">
     <tr>
       <th>ISBN</th>
@@ -20,7 +20,7 @@
       <th>AUTHOR</th>
       <th>Price</th>
     </tr>
-    <tr th:each="book : ${cartItems}">
+    <tr th:each="book : ${cartItems}"> <!-- Loops through books in the cart -->
       <td th:text="${book.isbn}"></td>
       <td th:text="${book.title}"></td>
       <td th:text="${book.author}"></td>
@@ -43,8 +43,8 @@
 
   <!-- Footer -->
   <footer>
-    <p><em><strong>Sheridan College</strong></em> ❤️ &nbsp; Copyright © Le Nguyen</p>
-    <p><small>ID: 484385423</small></p>
+    <p><em><strong>Bruno Barros</strong></em> </p>
+    <p><small>ID: 991758456</small></p>
   </footer>
 </div>
 </body>
