--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,15 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
   <title>Le's Online Book Store</title>
-  <link rel="stylesheet" th:href="@{/css/styles1.css}"> <!-- Header styles -->
-  <link rel="stylesheet" th:href="@{/css/styles0.css}"> <!-- Page-specific styles -->
+  <link rel="stylesheet" th:href="@{/css/styles1.css}">
+  <link rel="stylesheet" th:href="@{/css/styles0.css}">
 </head>
 <body>
 <!-- Include Header -->
 <th:block th:insert="fragments/header.html"></th:block>
 
 <div class="container">
-  <h1 class="welcome-title">Welcome to Le's Online Book Store!</h1>
+  <h1 class="welcome-title">Welcome to Bruno's Online Book Store!</h1>
 
   <!-- Home Page Image -->
   <div class="home-image">
@@ -20,8 +20,8 @@
 
 <!-- Footer -->
 <footer>
-  <p><em><strong>Sheridan College</strong></em> ❤️ &nbsp; Copyright © Le Nguyen</p>
-  <p><small>ID: 484385423</small></p>
+  <p><em><strong>Bruno Barros</strong></em> </p>
+  <p><small>ID: 991758456</small></p>
 </footer>
 </body>
 </html>
