--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-  <title>Le's Online Book Store</title>
+  <title>Bruno's Online Book Store</title>
   <link rel="stylesheet" th:href="@{/css/styles1.css}">
   <link rel="stylesheet" th:href="@{/css/styles0.css}">
 </head>
